Add new feature to sample app

--- a/samples/XCT.Sample/Resx/AppResources.es.resx
+++ b/samples/XCT.Sample/Resx/AppResources.es.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -128,5 +128,8 @@
   </data>
   <data name="Save" xml:space="preserve">
     <value>Guardar</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>Versión de la aplicación: {0}</value>
   </data>
 </root>
